# omp-cef

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/: cliff.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/setup-cef/: action.yml
.github/workflows/: build-client-reusable.yml  build-server-reusable.yml  create-release-reusable.yml  release.yml
cmake/: AddWinVersion.cmake  cef.cmake  version.rc.in
src/client/: CMakeLists.txt
src/client/core/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  pch.hpp  runtime.cpp  runtime.hpp
src/client/core/browser/: app.hpp  audio.cpp  audio.hpp  client.cpp  client.hpp  focus.cpp  focus.hpp  manager.cpp  manager.hpp  scheme_handler.cpp  scheme_handler.hpp
src/client/core/game_sa/: common.cpp  common.h
src/client/core/hooks/: d3d9.cpp  d3d9.hpp  d3ddevice9.cpp  d3ddevice9.hpp  hook_manager.cpp  hook_manager.hpp  render_hook.cpp  render_hook.hpp  wndproc.cpp  wndproc.hpp
src/client/core/network/: network_manager.cpp  network_manager.hpp
src/client/core/rendering/: render_manager.cpp  render_manager.hpp  view.cpp  view.hpp  view_texture.cpp  view_texture.hpp  world_renderer.cpp  world_renderer.hpp
src/client/core/samp/: addresses.cpp  addresses.hpp  common.hpp  samp.cpp  samp.hpp  samp_version_manager.cpp  samp_version_manager.hpp
src/client/core/samp/components/: component.hpp  component_registry.hpp  game.cpp  game.hpp  game_view.hpp  netgame.cpp  netgame.hpp  netgame_view.hpp
src/client/core/samp/components/dl/: game.cpp  game.hpp  netgame.cpp  netgame.hpp
src/client/core/samp/components/r1/: game.cpp  game.hpp  netgame.cpp  netgame.hpp
src/client/core/samp/components/r3/: game.cpp  game.hpp  netgame.cpp  netgame.hpp
src/client/core/samp/components/r5/: game.cpp  game.hpp  netgame.cpp  netgame.hpp
src/client/core/samp/hooks/: chat.cpp  chat.hpp  netgame.cpp  netgame.hpp
src/client/core/samp/pools/: game_pool.hpp
src/client/core/samp/pools/dl/: object.hpp  vehicle.hpp
src/client/core/samp/pools/r1/: object.hpp  vehicle.hpp
src/client/core/samp/pools/r3/: object.hpp  vehicle.hpp
src/client/core/samp/pools/r5/: object.hpp  vehicle.hpp
src/client/core/system/: config_manager.cpp  config_manager.hpp  gta.cpp  gta.hpp  logger.hpp  resource_manager.cpp  resource_manager.hpp  security_manager.hpp
src/client/core/ui/: download_dialog.cpp  download_dialog.hpp  hud_manager.cpp  hud_manager.hpp
src/client/loader/: CMakeLists.txt  main.cpp
src/client/renderer/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  cef.inc
src/server/common/: CMakeLists.txt  api.cpp  api.hpp  bridge.hpp  encoding.hpp  logger.cpp  logger.hpp  natives.cpp  natives.hpp  network.cpp  network.hpp  plugin.cpp  plugin.hpp  resource_dialog.cpp  resource_dialog.hpp  resource_manager.cpp  resource_manager.hpp  security.cpp  security.hpp  session.cpp  session.hpp  version.hpp
src/server/omp/: CMakeLists.txt  component.cpp  component.hpp  main.cpp  omg_bridge.cpp  omp_bridge.hpp
src/server/samp/: CMakeLists.txt  common.hpp  config_cfg.cpp  config_cfg.hpp  main.cpp  plugin.def  samp_bridge.cpp  samp_bridge.hpp
src/shared/: CMakeLists.txt  crypto.hpp  events.hpp  packet-serializer.hpp  packet.hpp  utils.hpp
